--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     </li>
     <li>
       <a
-        routerLink="/second-component"
+        routerLink="/todos-done"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         class="text-white hover:text-slate-800 hover:bg-slate-100 rounded-full px-4 py-2"
