--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -1,5 +1,5 @@
-<div class="container mx-auto max-w-md mt-8">
-  <h2 class="text-2xl text-white mb-4">Done Todos</h2>
+<div class="container mx-auto max-w-sm mt-8">
+  <h2 class="text-2xl text-white mb-4 text-center">Done Todos</h2>
   <div class="list">
     <ul>
       <li
