--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,2 @@
-<nav class="bg-gray-800 p-6">
-  <ul class="flex md:gap-7 justify-center items-center">
-    <li>
-      <a
-        routerLink="/"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        class="text-white hover:text-slate-800 hover:bg-slate-100 rounded-full px-4 py-2"
-        >Home</a
-      >
-    </li>
-    <li class="links">
-      <a
-        routerLink="/show-todos"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        class="text-white hover:text-slate-800 hover:bg-slate-100 rounded-full px-4 py-2"
-        >Show Todos</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/todos-done"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        class="text-white hover:text-slate-800 hover:bg-slate-100 rounded-full px-4 py-2"
-        >Todos Done</a
-      >
-    </li>
-  </ul>
-</nav>
-
-<div class="flex flex-col justify-center items-center">
-  <div class="my-16">
-    <h1 class="text-white text-6xl">Todo List</h1>
-  </div>
-
-  <div class="max-w-sm">
-    <p class="text-2xl text-white text-center mb-6">Add a todo...</p>
-    <br />
-    <div class="flex gap-4">
-      <input
-        type="text"
-        class="p-2 rounded-lg"
-        placeholder="Type a todo"
-        [(ngModel)]="todoValue"
-        (keyup.enter)="addItem()"
-      />
-      <button class="bg-purple-600 text-white p-2 rounded-lg" (click)="addItem()">
-        Add Todo
-      </button>
-    </div>
-
-
-    <div class="list mt-4">
-      <ul>
-        <li
-          *ngFor="let item of list"
-          class="bg-white text-black p-2 rounded-lg mb-2 flex items-center justify-between"
-        >
-          <input
-            type="checkbox"
-            name="isDone"
-            [(ngModel)]="item.isDone"
-            class="mr-4"
-          />
-          <span class="flex-grow text-slate-600">{{ item.value }}</span>
-          <button
-            class="bg-red-500 text-white uppercase px-4 py-2 rounded-lg"
-            (click)="deleteItem(item.id)"
-          >
-            Delete
-          </button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
